[tool.poetry]
name = "tutorial-python"
version = "0.1.0"
description = "Tutorial python project"
authors = ["WaclawZ <waclaw.zalicki@gmail.com>"]
license = "MIT"
homepage = "https://github.com/WaclawZ/tutorial-python.git"
repository = "https://github.com/WaclawZ/tutorial-python.git"
keywords = ["python", "tutorial"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
